Starred items - allow undo for unstarring
If someone is in the starred items view and they unstar an item, it disappears and there's no way to get it back if they made a mistake.
The obvious solution would be to show an in-app notification which has an undo button, similar to what we do for file trashes. The in-app notification would only be shown when unstarring from the starred items view.