window: Do in-app notification for unstarring

When unstarring a file in the starred view the file disappear from the
view immediately, with no visual clue how to get it back in case of
accident.

This leads to confusion and is generally bad UX.

To fix it, implement an in-app notification for unstarring when doing
it inside the starred view.

The commit has also some clean ups, and makes sure it removes all
notifications before displaying another one.

Closes https://gitlab.gnome.org/GNOME/nautilus/issues/239